--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -60,9 +60,9 @@ jobs:
         run: |
           SERVICE_ACCOUNT_EMAIL=$GSA_NAME@$PROJECT_ID.iam.gserviceaccount.com
           touch service-account.json
+          echo $credentials_json
+          echom SERVICE_ACCOUNT_EMAIL
           echo $credentials_json > service-account.json
-          echo service-account.json
-          echo $SERVICE_ACCOUNT_EMAIL
           gcloud auth activate-service-account SERVICE_ACCOUNT_EMAIL --key-file=service-account.json
           docker build -t us-east1-docker.pkg.dev/$PROJECT_ID/$PROJECT_ID/saludtechalpes-data-processor-service:build-$GITHUB_RUN_NUMBER .
           docker push us-east1-docker.pkg.dev/$PROJECT_ID/$PROJECT_ID/saludtechalpes-data-processor-service:build-$GITHUB_RUN_NUMBER
