--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -61,7 +61,7 @@ jobs:
           SERVICE_ACCOUNT_EMAIL=$GSA_NAME@$PROJECT_ID.iam.gserviceaccount.com
           touch service-account.json
           echo $credentials_json
-          echom SERVICE_ACCOUNT_EMAIL
+          echo SERVICE_ACCOUNT_EMAIL
           echo $credentials_json > service-account.json
           gcloud auth activate-service-account SERVICE_ACCOUNT_EMAIL --key-file=service-account.json
           docker build -t us-east1-docker.pkg.dev/$PROJECT_ID/$PROJECT_ID/saludtechalpes-data-processor-service:build-$GITHUB_RUN_NUMBER .
