--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -64,11 +64,11 @@ jobs:
       - name: Get GKE credentials
         env:
           CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
-          CLUSTER_ZONE: ${{ vars.CLUSTER_ZONE }}
+          CLUSTER_REGION: ${{ vars.CLUSTER_REGION }}
           PHRASE_KEY: ${{ secrets.PHRASE_KEY }}
           PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         run: |
-          gcloud container clusters get-credentials $CLUSTER_NAME --zone $CLUSTER_ZONE --project $PROJECT_ID
+          gcloud container clusters get-credentials $CLUSTER_NAME --region $CLUSTER_ZONE --project $PROJECT_ID
 
       - name: kubectl apply and deploy 🚀
         run: |
