--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -71,7 +71,10 @@ jobs:
           gcloud container clusters get-credentials $CLUSTER_NAME --region $CLUSTER_REGION --project $PROJECT_ID
 
       - name: kubectl apply and deploy 🚀
+        env:
+          PHRASE_KEY: ${{ secrets.PHRASE_KEY }}
         run: |
+          gcloud components install gke-gcloud-auth-plugin
           PHRASE_KEY=${{ secrets.PHRASE_KEY }}
           sed "s/{{IMAGE_TAG}}/build-${GITHUB_RUN_NUMBER}/g" ./kubernetes/staging/k8s-deployment.tmpl > kubernetes/staging/k8s-deployment.yaml
           sed "s/{{PHRASE_KEY}}/${PHRASE_KEY}/g" ./kubernetes/staging/k8s-secrets.tmpl > kubernetes/staging/k8s-secrets.yaml
