Trying to install github auth plugin

--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -56,10 +56,11 @@ jobs:
         run: gcloud auth configure-docker us-east1-docker.pkg.dev
       
       - name: Install GKE Auth Plugin
-        run: gcloud components install gke-gcloud-auth-plugin
+        run: sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+
       - name: Set Kubernetes Authentication Plugin
         run: echo "export USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-        
+
       - name: Build and push Docker 🐳 image
         env:
           PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
