--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -56,7 +56,10 @@ jobs:
         run: gcloud auth configure-docker us-east1-docker.pkg.dev
       
       - name: Install GKE Auth Plugin
-        run: sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+        run: |
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
 
       - name: Set Kubernetes Authentication Plugin
         run: echo "export USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
