Fixing GKE deployment

--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -54,18 +54,6 @@ jobs:
           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
       - name: Configure Docker to use GCR
         run: gcloud auth configure-docker us-east1-docker.pkg.dev
-      
-      - name: Authenticate with Google Cloud
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      - name: Install GKE Auth Plugin
-        run: gcloud components install gke-gcloud-auth-plugin --quiet
-
-      - name: Set Kubernetes Authentication Plugin
-        run: echo "export USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-
 
       - name: Build and push Docker 🐳 image
         env:
@@ -74,7 +62,7 @@ jobs:
           docker build -t us-east1-docker.pkg.dev/$PROJECT_ID/$PROJECT_ID/saludtechalpes-data-processor-service:build-$GITHUB_RUN_NUMBER .
           docker push us-east1-docker.pkg.dev/$PROJECT_ID/$PROJECT_ID/saludtechalpes-data-processor-service:build-$GITHUB_RUN_NUMBER
       
-      - name: Get GKE credentials
+      - name: Get GKE credentials and kubectl apply and deploy 🚀
         env:
           CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
           CLUSTER_REGION: ${{ vars.CLUSTER_REGION }}
@@ -82,12 +70,6 @@ jobs:
           PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
         run: |
           gcloud container clusters get-credentials $CLUSTER_NAME --region $CLUSTER_REGION --project $PROJECT_ID
-
-      - name: kubectl apply and deploy 🚀
-        env:
-          PHRASE_KEY: ${{ secrets.PHRASE_KEY }}
-        run: |
-          gcloud components install gke-gcloud-auth-plugin
           PHRASE_KEY=${{ secrets.PHRASE_KEY }}
           sed "s/{{IMAGE_TAG}}/build-${GITHUB_RUN_NUMBER}/g" ./kubernetes/staging/k8s-deployment.tmpl > kubernetes/staging/k8s-deployment.yaml
           sed "s/{{PHRASE_KEY}}/${PHRASE_KEY}/g" ./kubernetes/staging/k8s-secrets.tmpl > kubernetes/staging/k8s-secrets.yaml
@@ -96,3 +78,4 @@ jobs:
           kubectl apply -f kubernetes/staging/k8s-hpa.yaml
           kubectl apply -f kubernetes/staging/k8s-ingress.yaml
           kubectl apply -f kubernetes/staging/k8s-secrets.yaml
+
