--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -71,7 +71,7 @@ jobs:
         run: |
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
           gcloud container clusters get-credentials $CLUSTER_NAME --region $CLUSTER_REGION --project $PROJECT_ID
-          apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
+          sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
           # gcloud components install kubectl
           # kubectl version --client
           # PHRASE_KEY=${{ secrets.PHRASE_KEY }}
