--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -79,12 +79,12 @@ jobs:
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
           sudo apt-get install kubectl
           kubectl version --client
-          # PHRASE_KEY=${{ secrets.PHRASE_KEY }}
-          # sed "s/{{IMAGE_TAG}}/build-${GITHUB_RUN_NUMBER}/g" ./kubernetes/staging/k8s-deployment.tmpl > kubernetes/staging/k8s-deployment.yaml
-          # sed "s/{{PHRASE_KEY}}/${PHRASE_KEY}/g" ./kubernetes/staging/k8s-secrets.tmpl > kubernetes/staging/k8s-secrets.yaml
-          # kubectl apply -f kubernetes/staging/k8s-configMap.yaml
-          # kubectl apply -f kubernetes/staging/k8s-deployment.yaml
-          # kubectl apply -f kubernetes/staging/k8s-hpa.yaml
-          # kubectl apply -f kubernetes/staging/k8s-ingress.yaml
-          # kubectl apply -f kubernetes/staging/k8s-secrets.yaml
+          PHRASE_KEY=${{ secrets.PHRASE_KEY }}
+          sed "s/{{IMAGE_TAG}}/build-${GITHUB_RUN_NUMBER}/g" ./kubernetes/staging/k8s-deployment.tmpl > kubernetes/staging/k8s-deployment.yaml
+          sed "s/{{PHRASE_KEY}}/${PHRASE_KEY}/g" ./kubernetes/staging/k8s-secrets.tmpl > kubernetes/staging/k8s-secrets.yaml
+          kubectl apply -f kubernetes/staging/k8s-configMap.yaml
+          kubectl apply -f kubernetes/staging/k8s-deployment.yaml
+          kubectl apply -f kubernetes/staging/k8s-hpa.yaml
+          kubectl apply -f kubernetes/staging/k8s-ingress.yaml
+          kubectl apply -f kubernetes/staging/k8s-secrets.yaml
 
