Adding pulsar kubernetes manifest and add database data connection

--- a/kubernetes/local/k8s-configMap.yaml
+++ b/kubernetes/local/k8s-configMap.yaml
@@ -5,3 +5,5 @@ metadata:
 data:
   FLASK_ENV: "local"
   APP_NAME: "saludtechalpes-data-processor-service"
+  PULSAR_HOST: "pulsar"
+  BROKER_HOST: "broker"
