--- a/kubernetes/local/k8s-secrets.yaml
+++ b/kubernetes/local/k8s-secrets.yaml
@@ -4,3 +4,8 @@ metadata:
   name: data-processor-secrets
 stringData:
   PHRASE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6ImxvY2FsIiwibmFtZSI6InNhbHVkdGVjaGFscGVzLWRhdGEtcHJvY2Vzc29yLXNlcnZpY2UifQ._dZfflX6n7R-Pm2gKtUYD7knTJKt7iWbL3NymcCPdjE
+  DB_USER: admin
+  DB_PASSWORD: admin
+  DB_NAME: saludtechalpes
+  DB_PORT: "5432"
+  DB_HOST: postgres-service
