--- a/kubernetes/staging/k8s-configMap.yaml
+++ b/kubernetes/staging/k8s-configMap.yaml
@@ -5,3 +5,5 @@ metadata:
 data:
   FLASK_ENV: "staging"
   APP_NAME: "saludtechalpes-data-processor-service"
+  PULSAR_HOST: "pulsar"
+  BROKER_HOST: "broker"
