--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -84,6 +84,12 @@ jobs:
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
           sudo apt-get install kubectl
           kubectl version --client
+          PHRASE_KEY=${{ secrets.PHRASE_KEY }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DB_NAME=${{ secrets.DB_NAME }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_HOST=${{ secrets.DB_HOST }}
           sed "s/{{IMAGE_TAG}}/build-${GITHUB_RUN_NUMBER}/g" ./kubernetes/staging/k8s-deployment.tmpl > kubernetes/staging/k8s-deployment.yaml
           sed -e "s|{{PHRASE_KEY}}|${PHRASE_KEY}|g" \
           -e "s|{{DB_USER}}|${DB_USER}|g" \
