--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -104,9 +104,7 @@ services:
   data-processor-service:
     container_name: data-processor-service
     hostname: data-processor-service
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/saludtechalpes/saludtechalpes-data-processor-service:latest
     networks:
       - db_net
       - pulsar
@@ -116,7 +114,7 @@ services:
       db:
         condition: service_started
     env_file:
-      - .env.local
+      - .env
     ports:
       - "5000:5000"
 
