--- a/kubernetes/staging/k8s-configMap.yaml
+++ b/kubernetes/staging/k8s-configMap.yaml
@@ -6,4 +6,4 @@ data:
   FLASK_ENV: "staging"
   APP_NAME: "saludtechalpes-data-processor-service"
   PULSAR_HOST: "pulsar"
-  BROKER_HOST: "broker"
+  BROKER_HOST: "pulsar-broker"
