--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -73,7 +73,7 @@ spec:
               exec bin/pulsar bookie
           env:
             - name: metadataServiceUri
-              value: "metadata-store:zk:zookeeper:2181"
+              value: "zk://zookeeper:2181/ledgers"
             - name: clusterName
               value: "cluster-a"
           ports:
@@ -128,7 +128,7 @@ spec:
             - name: advertisedAddress
               value: "broker"
             - name: advertisedListeners
-              value: "internal:pulsar://pulsar-broker:6650,external:pulsar://localhost:6650"
+              value: "internal:pulsar://broker:6650,external:pulsar://localhost:6650"
           ports:
             - containerPort: 6650  # Pulsar Binary Protocol
             - containerPort: 8080  # Pulsar HTTP API
