Adding local kubernetes configuration

--- a/kubernetes/local/k8s-configMap.yaml
+++ b/kubernetes/local/k8s-configMap.yaml
@@ -6,4 +6,4 @@ data:
   FLASK_ENV: "local"
   APP_NAME: "saludtechalpes-data-processor-service"
   PULSAR_HOST: "pulsar"
-  BROKER_HOST: "broker"
+  BROKER_HOST: "pulsar-broker"
