--- a/kubernetes/local/k8s-postgres.yaml
+++ b/kubernetes/local/k8s-postgres.yaml
@@ -52,7 +52,7 @@ spec:
     - protocol: TCP
       port: 5432
       targetPort: 5432
-  type: ClusterIP
+  type: LoadBalancer
 
 ---
 #####################################
