--- a/kubernetes/local/k8s-pulsar.yaml
+++ b/kubernetes/local/k8s-pulsar.yaml
@@ -19,18 +19,25 @@ spec:
     spec:
       containers:
         - name: zookeeper
-          image: apachepulsar/pulsar:latest
+          image: apachepulsar/pulsar:2.9.1
+          resources:
+            requests:
+              memory: "1Gi"
+              cpu: "500m"
+            limits:
+              memory: "2Gi"
+              cpu: "1"
+          env:
+            - name: metadataStoreUrl
+              value: "zk:zookeeper:2181"
+          ports:
+            - containerPort: 2181
           command: ["/bin/bash", "-c"]
           args:
             - >
               bin/apply-config-from-env.py conf/zookeeper.conf && 
               bin/generate-zookeeper-config.sh conf/zookeeper.conf &&
               exec bin/pulsar zookeeper
-          env:
-            - name: metadataStoreUrl
-              value: "zk:zookeeper:2181"
-          ports:
-            - containerPort: 2181
 ---
 apiVersion: v1
 kind: Service
@@ -63,9 +70,13 @@ spec:
       labels:
         app: bookkeeper
     spec:
+      initContainers:
+        - name: wait-for-zookeeper
+          image: busybox
+          command: ['sh', '-c', 'until nc -z zookeeper 2181; do echo waiting for zookeeper; sleep 2; done;']
       containers:
         - name: bookie
-          image: apachepulsar/pulsar:latest
+          image: apachepulsar/pulsar:2.9.1
           command: ["/bin/bash", "-c"]
           args:
             - >
@@ -110,6 +121,13 @@ spec:
       labels:
         app: pulsar-broker
     spec:
+      initContainers:
+        - name: wait-for-zookeeper
+          image: busybox
+          command: ['sh', '-c', 'until nc -z zookeeper 2181; do echo waiting for zookeeper; sleep 2; done;']
+        - name: wait-for-bookkeeper
+          image: busybox
+          command: ['sh', '-c', 'until nc -z bookkeeper 3181; do echo waiting for bookkeeper; sleep 2; done;']
       containers:
         - name: broker
           image: apachepulsar/pulsar:latest
@@ -126,9 +144,9 @@ spec:
             - name: clusterName
               value: "cluster-a"
             - name: advertisedAddress
-              value: "broker"
+              value: "pulsar-broker"
             - name: advertisedListeners
-              value: "internal:pulsar://broker:6650,external:pulsar://localhost:6650"
+              value: "internal:pulsar://pulsar-broker:6650,external:pulsar://localhost:6650"
           ports:
             - containerPort: 6650  # Pulsar Binary Protocol
             - containerPort: 8080  # Pulsar HTTP API
