--- a/kubernetes/local/k8s-secrets.yaml
+++ b/kubernetes/local/k8s-secrets.yaml
@@ -8,4 +8,4 @@ stringData:
   DB_PASSWORD: admin
   DB_NAME: saludtechalpes
   DB_PORT: "5432"
-  DB_HOST: postgres-service
+  DB_HOST: "postgres-service"
