--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -144,9 +144,9 @@ spec:
             - name: clusterName
               value: "cluster-a"
             - name: advertisedAddress
-              value: "pulsar-broker"
+              value: "broker"
             - name: advertisedListeners
-              value: "internal:pulsar://pulsar-broker:6650,external:pulsar://localhost:6650"
+              value: "internal:pulsar://broker:6650,external:pulsar://localhost:6650"
           ports:
             - containerPort: 6650  # Pulsar Binary Protocol
             - containerPort: 8080  # Pulsar HTTP API
