--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -84,7 +84,7 @@ spec:
               exec bin/pulsar bookie
           env:
             - name: metadataServiceUri
-              value: "metadata-store:zk:zookeeper:2181"
+              value: "zookeeper:2181"
             - name: clusterName
               value: "cluster-a"
           ports:
