--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -86,7 +86,7 @@ spec:
               cpu: "1"
           env:
             - name: metadataServiceUri
-              value: "zk:zookeeper:2181"
+              value: "zk://zookeeper:2181"
             - name: clusterName
               value: "cluster-a"
           ports:
@@ -174,4 +174,4 @@ spec:
       name: http-port
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
