--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -155,7 +155,7 @@ spec:
             - name: advertisedAddress
               value: "pulsar-broker"
             - name: advertisedListeners
-              value: "internal:pulsar://pulsar-broker:6650,external:pulsar://pulsar-broker:6650"
+              value: "internal:pulsar://pulsar-broker:6650"
           ports:
             - containerPort: 6650  # Pulsar Binary Protocol
             - containerPort: 8080  # Pulsar HTTP API
