--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -145,9 +145,9 @@ spec:
               exec bin/pulsar broker
           env:
             - name: metadataServiceUri
-              value: "zk://zookeeper:2181"
+              value: "zk:zookeeper:2181"
             - name: metadataStoreUrl
-              value: "zk://zookeeper:2181"
+              value: "zk:zookeeper:2181"
             - name: zookeeperServers
               value: "zookeeper:2181"
             - name: clusterName
