--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -86,7 +86,11 @@ spec:
               cpu: "1"
           env:
             - name: metadataServiceUri
-              value: "zk://zookeeper:2181"
+              value: "zk:zookeeper:2181"
+            - name: metadataStoreUrl
+              value: "zk:zookeeper:2181"
+            - name: zookeeperServers
+              value: "zookeeper:2181"
             - name: clusterName
               value: "cluster-a"
           ports:
