Adding configmap for bookkeeper

--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -100,6 +100,7 @@ jobs:
           ./kubernetes/staging/k8s-secrets.tmpl > kubernetes/staging/k8s-secrets.yaml
           kubectl apply -f kubernetes/staging/k8s-configMap.yaml
           kubectl apply -f kubernetes/staging/k8s-secrets.yaml
+          kubectl apply -f kubernetes/staging/bookkeeper-configmap.yaml
           kubectl apply -f kubernetes/staging/k8s-pulsar.yaml
           kubectl apply -f kubernetes/staging/k8s-pulsar-init.yaml
           kubectl apply -f kubernetes/staging/k8s-deployment.yaml
