--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -86,9 +86,9 @@ spec:
               cpu: "1"
           env:
             - name: metadataServiceUri
-              value: "zk:zookeeper:2181"
+              value: "zookeeper:2181"
             - name: metadataStoreUrl
-              value: "zk:zookeeper:2181"
+              value: "zookeeper:2181"
             - name: clusterName
               value: "cluster-a"
             - name: "ZOOKEEPER_SERVICE_HOST"
@@ -106,6 +106,10 @@ spec:
                 configMapKeyRef:
                   name: bookkeeper-configmap
                   key: zookeeperServers
+            - name: advertisedAddress
+              value: "pulsar-broker"
+            - name: advertisedListeners
+              value: "internal:pulsar://pulsar-broker:6650,external:pulsar://localhost:6650"
           ports:
             - containerPort: 3181
           command: ["/bin/bash", "-c"]
