--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -86,9 +86,9 @@ spec:
               cpu: "1"
           env:
             - name: metadataServiceUri
-              value: "zookeeper:2181"
+              value: "zk:zookeeper:2181"
             - name: metadataStoreUrl
-              value: "zookeeper:2181"
+              value: "zk:zookeeper:2181"
             - name: clusterName
               value: "cluster-a"
             - name: "ZOOKEEPER_SERVICE_HOST"
