--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -101,7 +101,7 @@ jobs:
           kubectl apply -f kubernetes/staging/k8s-configMap.yaml
           kubectl apply -f kubernetes/staging/k8s-secrets.yaml
           kubectl apply -f kubernetes/staging/bookkeeper-configmap.yaml
-          kubeclt apply -f kubernetes/staging/bookkeeper-pvc.yaml
+          kubectl apply -f kubernetes/staging/bookkeeper-pvc.yaml
           kubectl apply -f kubernetes/staging/k8s-pulsar.yaml
           kubectl apply -f kubernetes/staging/k8s-pulsar-init.yaml
           kubectl apply -f kubernetes/staging/k8s-deployment.yaml
