--- a/kubernetes/staging/k8s-pulsar.yaml
+++ b/kubernetes/staging/k8s-pulsar.yaml
@@ -77,7 +77,7 @@ spec:
           command: ['sh', '-c', 'until nc -z zookeeper 2181; do echo waiting for zookeeper; sleep 2; done;']
       containers:
         - name: bookie
-          image: apachepulsar/pulsar:latest
+          image: apachepulsar/pulsar:2.9.1
           resources:
             requests:
               memory: "2Gi"
